--- a/css/login.css
+++ b/css/login.css
@@ -9,12 +9,19 @@ html,body{
 }
 
 #login-header{
-    height: 20%;
+    height: 15%;
     border: 1 solid blue;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: #212529;
+    color: white;
+    opacity: 0.8;
 }
 
 #login-form{
-    opacity: 0.8;
+    opacity: 0.9;
     width: 50%;
     padding: 30px;
 }
